platform-engineering/Lens-IDE/minikube/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: frontend-app
  name: frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend-app
    spec:
      containers:
        - env:
            - name: BACKEND_API_URL
              value: http://nodeapp:3456
          image: priyankainflectionzone/frontend-app:3.0
          name: frontend-container
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
