platform-engineering/Lens-IDE/minikube/manifests/nodeapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node-app
  name: nodeapp-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  strategy: {}
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - args:
            - bash
            - -c
            - while !</dev/tcp/mysqldb/3306; do sleep 20; done; npm run start:migrate
          image: priyankainflectionzone/backend-app:1.0
          name: backend-container
          ports:
            - containerPort: 3456
          resources: {}
      restartPolicy: Always
status: {}
