platform-engineering/Lens-IDE/minikube/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    name: frontend
  name: frontend
spec:
  # type: NodePort
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
      # nodePort: 30001

  selector:
    app: frontend-app
status:
  loadBalancer: {}
