platform-engineering/Lens-IDE/minikube/manifests/nginx-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: frontend-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx-app
  podSelector:
    matchLabels:
      app: frontend-app
